# tg_bot

./: Dockerfile  Makefile  README.md  pyproject.toml
tg_bot/: main.py  memes.py
